--- a/sony-camera-analyzer/package.json
+++ b/sony-camera-analyzer/package.json
@@ -41,12 +41,15 @@
     "asarUnpack": [
       "**/node_modules/exiftool-vendored/**/*",
       "**/node_modules/exiftool-vendored.exe/**/*",
-      "**/node_modules/exiftool-vendored.pl/**/*"
+      "**/node_modules/exiftool-vendored.pl/**/*",
+      "**/node_modules/ffmpeg-static/**/*"
     ]
   },
   "dependencies": {
     "exiftool-vendored": "^33.5.0",
     "fast-xml-parser": "^5.3.2",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
