--- a/sony-camera-analyzer/package.json
+++ b/sony-camera-analyzer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sony-camera-analyzer",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Sony Camera Footage Analyzer",
   "repository": {
     "type": "git",
@@ -27,7 +27,15 @@
       "lib/**/*"
     ],
     "mac": {
-      "target": "dmg",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
       "category": "public.app-category.video"
     },
     "win": {
